hphp/hack/test/typecheck/no_isset_in_strict/no_isset_in_strict_mode.php.legacy.out
File "no_isset_in_strict_mode.php", line 9, characters 8-12:
isset cannot be used in a completely type safe way and so is banned in strict mode; You can use `($array[$key] ?? null) is nonnull` but you probably want C\contains_key. (Typing[4016])
